fixing spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -225,7 +225,7 @@ br { clear:both; }
 .title
 {
   border: 0; padding: 0; margin: 0;
-  margin-top: 0px;
+  margin-top: 40px;
   margin-bottom: 0px;
 }
 
@@ -301,8 +301,8 @@ div.feature h2 {
     margin-top: 0px;
     padding: 0;
     position: relative;
-    height: 480px;
-    max-width: 800px;
+    height: 600px;
+    max-width: 1000px;
     box-shadow: 4px 4px 18px -5px rgba(0,0,0,0.86);
 }
 .fadein img {
